Bug 1906039 - Add epub to MIME entries list. r=Gijs,mak

When selecting epub document by file picker, File.type doesn't set
epub's MIME type. So we should add this MIME type to entries list.

Differential Revision: https://phabricator.services.mozilla.com/D234952